<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Update source">
        <EditTextPreference
            android:key="json_url"
            android:title="Custom JSON URL"
            android:dialogTitle="Update manifest URL"
            android:summary="Remote manifest bloomina checks for new bloomina builds" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Automatic checks">
        <SwitchPreferenceCompat
            android:key="auto_check"
            android:title="@string/pref_auto_check"
            android:summary="@string/pref_auto_check_summary"
            android:defaultValue="true" />
        <ListPreference
            android:key="check_interval"
            android:title="@string/pref_check_interval"
            android:summary="@string/pref_check_interval_summary"
            android:entries="@array/check_interval_entries"
            android:entryValues="@array/check_interval_values"
            android:defaultValue="6"
            android:dependency="auto_check" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Maintenance">
        <Preference
            android:key="update_history"
            android:title="@string/pref_update_history"
            android:summary="@string/pref_update_history_summary" />
        <Preference
            android:key="reset"
            android:title="Reset configurations"
            android:summary="Clear all saved bloomina flags and restore defaults" />
    </PreferenceCategory>
</PreferenceScreen>
